# market-info-api

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: cache.py  config.py  main.py  r2.py
app/routers/: earnings_calendar.py  edinet.py  health.py  market_calendar.py  market_rankings.py  nikkei.py  nikko.py  ranking.py  sbi.py  topix33.py  us_ranking.py  yutai.py
docs/: api-contract.md  api-usage.md  gcp-cloud-run-setup.md  mini-tools-migration.md
tests/: test_routers_unit.py
tests/fixtures/: nikkei_day_real_shape.json  yutai_manifest_real_shape.json  yutai_month_real_shape.json
