[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "market-info-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "pydantic>=2.0",
  "cachetools>=5.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
